<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="sharedElementContainer"
    tools:context=".ui.SelectedFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFullName"
                style="?attr/textAppearanceHeadline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/full_names" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_nickname" />

            <TextView
                android:id="@+id/txtNickname"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/first_names" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_address" />

            <TextView
                android:id="@+id/txtAddress"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/cities" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_mobile" />

            <TextView
                android:id="@+id/txtMobile"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/us_phones" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_email" />

            <TextView
                android:id="@+id/txtEmail"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_gender" />

            <TextView
                android:id="@+id/txtGender"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_birthday" />

            <TextView
                android:id="@+id/txtBirthday"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/date/mmddyy" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_age" />

            <TextView
                android:id="@+id/txtAge"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_occupation" />

            <TextView
                android:id="@+id/txtOccupation"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_language" />

            <TextView
                android:id="@+id/txtLanguage"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_color" />

            <TextView
                android:id="@+id/txtColor"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_musician" />

            <TextView
                android:id="@+id/txtMusician"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_movie" />

            <TextView
                android:id="@+id/txtMovie"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_tv_show" />

            <TextView
                android:id="@+id/txtTvShow"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_actor" />

            <TextView
                android:id="@+id/txtActor"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_book" />

            <TextView
                android:id="@+id/txtBook"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_author" />

            <TextView
                android:id="@+id/txtAuthor"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_game" />

            <TextView
                android:id="@+id/txtGame"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_food" />

            <TextView
                android:id="@+id/txtFood"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_place" />

            <TextView
                android:id="@+id/txtPlace"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@tools:sample/lorem" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/btn_edit"
        app:icon="@drawable/ic_create"
        app:layout_anchor="@+id/scrollView"
        app:layout_anchorGravity="end|bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>